--- a/Homepage.html
+++ b/Homepage.html
@@ -12,7 +12,7 @@
             <h1>My E-Portfolio</h1>
         </div>
          <nav>
-            <a href="Homepage.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="AboutMe.html">About Me</a>
             <a href="SchoolExperiences.html">School Experiences</a>
             <a href="BO.html">Browser Outputs</a>
@@ -32,7 +32,7 @@
                 <a href="https://ch1hi.github.io/ICTPORTFOLIO-1STQUARTER/ICTPortfolio1.html?fbclid=IwZXh0bgNhZW0CMTEAAR09NB6y7eaWaM4RnMT0e6oUvR8Fgg634ty3mZjm243NbbTvtm7VNKdI-Qs_aem_ZIV02Atn6AD5h5gPfkXT3Q" class="button">1st Qtr E-Port</a>
 <a href="https://ch1hi.github.io/2ndPortfolio/2ndQuarter.html?fbclid=IwZXh0bgNhZW0CMTEAAR0jFSpacs-9sWaA22Tku72vhRMW4DkvQUxEMuXrbZfhe_ge5L3pnmJa_Cw_aem_1UQLAgr-cJdTqoIapVjckw" class="button">2nd Qtr E-Port</a>
 
-                <a href="About.html" class="button">About Me</a>
+                <a href="AboutMe.html" class="button">About Me</a>
             </div>
       <h3> ꒷︶꒷꒥꒷︶˚.꒷꒥꒷︶꒷꒷︶꒷꒥꒷︶˚.꒷꒥꒷︶꒷꒷︶꒷꒥꒷︶˚.꒷꒥꒷︶꒷꒷︶꒷꒥꒷︶˚.꒷꒥꒷︶꒷ </h3>
  </div>
